Stackless Python News
+++++++++++++++++++++

This file documents changes to the Stackless extension of CPython.
For other changes see Misc/NEWS.


What's New in Stackless 2.7.6?
==============================

*Release date: XXXX-XX-XX*


What's New in Stackless 2.7.5?
==============================

*Release date: 2013-05-17*

No Stackless specific changes.


What's New in Stackless 2.7.4?
==============================

*Release date: 2013-05-17*

- Fix unlinking of tasks in kill_tasks_with_stacks. The earlier code
  was a bit weird and would cause miscompilation on X64.

- http://www.stackless.com/ticket/23: Fix compile error with STACKLESS_OFF
  defined


What's New in Stackless 2.7.4rc2?
=================================

*Release date: 2013-05-01*

(A selection of user visible changes from mercurial commit log messages. Use 
 "hg log -b 2.7-slp -r v2.7.4rc2-slp:v2.7.2-slp  -v -M" to get the complete log.) 

- http://www.stackless.com/ticket/21: Fix crash on exit.

- http://www.stackless.com/ticket/22: soft switching for context managers.

- #17667: Fix Windows build using "build_pgo.bat -2".

- http://www.stackless.com/ticket/18: unexpected increase of nesting level in
  __call__.
 
- http://www.stackless.com/ticket/20: fix infinite recursion in __call__

- http://www.stackless.com/ticket/17: Fix a few clang warnings.

- http://www.stackless.com/ticket/14: Prevent overly optimization with 
  gcc 4.7.x.

- Add the feature of a tasklet error handler, global to the module.

- Add the tasklet.throw() method, which can raise an exception on a tasklet
  with traceback, just like channel.send_throw.  It also has the facility to
  either activate the target immediately (default) or just make it runnable.

- Add the switch-trap flag. Add unittests for channel action and stackless.run
  and stackless.schedule.

- Fix tasklet.raise_exception.  It had invalid flags and didn't work.

- Fix default argument handling of channel.send_throw


What's New in Stackless 2.7.3?